# monitor-system

./: BUILD_KERNEL_WSL2.md  Cargo.toml  README.md
monitor-system-service/: Cargo.toml  Cross.toml  Dockerfile
monitor-system-service/src/: audio.rs  auth.rs  camera.rs  main.rs  models.rs  trait.rs  websocket.rs
monitor-system-service/src/handlers/: camera.rs  mod.rs  system_info.rs
monitor-system-service/src/processor/: camera.rs  camera_control.rs
project/: Makefile  docker-compose.yml
project/docker/: Dockerfile  Dockerfile.amd64  Dockerfile.arm64
src/: audio.rs  camera.rs  main.rs  models.rs  websocket.rs
