[package]
name = "monitor-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
opencv = "0.91.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.83"
actix-cors = "0.7.0"
futures-util = "0.3.30"
actix-web-actors = "4.3.0"
tokio = { version = "1.37.0", features = ["full"] }
actix = "0.13.3"
tokio-tungstenite = "0.21.0"

bcrypt = "0.15.1"
base64 = "0.22.1"

