[package]
name = "monitor-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
opencv = "0.93.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.83"
actix-cors = "0.7.0"
actix-web-actors = "4.3.0"
actix = "0.13.3"

bcrypt = "0.15.1"
base64 = "0.22.1"
async-stream = "0.3.5"
http = "1.1.0"
sys-info = "0.9.1"
cpal = "0.15.3"
bytemuck = "1.16.0"
dasp = "0.11"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }

[[bin]]
name = "monitor-system"
path = "src/main.rs"