[package]
name = "monitor-system"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
opencv = "0.93.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
sys-info = "0.9.1"
cpal = "0.15.3"
tower = "0.5.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5.13"
uuid = {version =  "1.11.0", features = ["v4"] }

[[bin]]
name = "monitor-system"
path = "src/main.rs"
